test/arrays/errors/nilStorageNonNilAssocArr.compopts
-sTestClass=OwnedC        # nilStorageNonNilAssocArr.0.good
-sTestClass=SharedC       # nilStorageNonNilAssocArr.1.good
-sTestClass=UnmanagedC    # nilStorageNonNilAssocArr.2.good
