test/arrays/errors/nilStorageNonNilAssocArr.0.good
nilStorageNonNilAssocArr.chpl:17: In function 'main':
nilStorageNonNilAssocArr.chpl:19: error: Cannot default initialize associative array because element type owned C is a non-nilable class
